# metaquery

./: .gitignore  README.md  env.yml  setup.cfg  setup.py
metaquery/: __init__.py  __main__.py
metaquery/src/: export.R  igctools.py  model.py  pfunc.R  pheno.R  plot.R  plot_by_name.R  search.py  sql.py  table.R  taxa.R  utils.py
tables/: igc_summary.txt  study_summary.xlsx
tests/: job.1.yaml  job.yaml  job2.yaml  query.fasta  query2.fasta
