[metadata]
name = metaquery
summary = MetaQuery Query Sequence Abundance
author = Chunyu Zhao and Stephen Nayfach
author_email = chunyu.zhao@czbiohub.org
license = MIT
home_page = https://github.com/czbiohub/metaquery
project_urls =
    Source Code = https://github.com/czbiohub/metaquery
classifier =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
keywords =
    abundance
    metagenomics
    MetaQuery
